# form-game

./: .gitignore  PRD.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.claude/: settings.local.json
docs/: 3D_GAME_DESIGN.md  DEVELOPMENT.md  PRD.md  README.md
e2e/: 3d-scene.spec.ts  farm3d.spec.ts  minecraft.spec.ts  minimal.spec.ts  new-layout.spec.ts  open-world.spec.ts
public/: README.txt
scripts/: auto-init-db.html  init-db.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/animals/: AnimalConfig.ts  PlacedAnimal.tsx
src/components/building/: BuildPreview.tsx  PlacedBlock.tsx  PlacedFacility.tsx  PlacedItem.tsx
src/components/character/: CharacterCustomization.tsx
src/components/farming/: CropConfig.tsx  SeedConfig.tsx  TreeConfig.tsx
src/components/game/: FarmScene3D.tsx  PhaserGame.tsx
src/components/inventory/: Hotbar.tsx  InventoryPanel.tsx  ItemStack.tsx
src/components/machines/: PlacedMachine.tsx
src/components/mining/: MiningProgressBar.tsx  MiningSystem.tsx  OreGenerator.ts  UndergroundBlocks.tsx
src/components/player/: Player.tsx  (+1 more)
src/config/: ItemModels.tsx  MachineConfig.ts  ShopConfig.tsx
src/lib/: supabase.ts  types.ts
src/pages/: Game.tsx  Home.tsx  InitDatabase.tsx  Login.tsx  SetupGuide.tsx  Test3D.tsx  Test3DGame.tsx  TestAuth.tsx  TestMinimal.tsx
src/store/: authStore.ts  gameStore.ts
src/utils/: AudioManager.ts  itemMatcher.ts
supabase/migrations/: 001_create_tables.sql  001_initial_schema.sql
(+20 files in other folders)
